--- a/docs/src/_partials/_head.erb
+++ b/docs/src/_partials/_head.erb
@@ -3,23 +3,25 @@
 <% resource_title = strip_html(strip_newlines(title)) || site.metadata.title %>
 <title><%= resource_title %></title>
 
+<base href="<%= site.config.base_path %>/">
+
 <meta name="description" content="<%= metadata.description %>" />
-<link rel="modulepreload" href="<%= asset_path "javascript/index.js" %>">
-<link rel="modulepreload" href="<%= asset_path "javascript/defer.js" %>">
-<link rel="preload" href="<%= asset_path "styles/defer.css" %>" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<link rel="modulepreload" href="<%= find_asset "frontend/javascript/index.js" %>">
+<link rel="modulepreload" href="<%= find_asset "frontend/javascript/defer.js" %>">
+<link rel="preload" href="<%= find_asset "frontend/javascript/defer.css" %>" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <!-- Critical CSS -->
-<link rel="stylesheet" data-turbo-track="reload" href="<%= asset_path "styles/index.css" %>" />
+<link rel="stylesheet" data-turbo-track="reload" href="<%= find_asset "frontend/javascript/index.css" %>" />
 <!-- Deferred CSS -->
-<noscript><link rel="stylesheet" href="<%= asset_path "styles/defer.css" %>"></noscript>
+<noscript><link rel="stylesheet" href="<%= find_asset "frontend/javascript/defer.css" %>"></noscript>
 
 <!-- Entrypoints -->
-<script data-turbo-track="reload" src="<%= asset_path "javascript/index.js" %>" type="module"></script>
-<script data-turbo-track="reload" src="<%= asset_path "javascript/defer.js" %>" type="module"></script>
+<script data-turbo-track="reload" src="<%= find_asset "frontend/javascript/index.js" %>" type="module"></script>
+<script data-turbo-track="reload" src="<%= find_asset "frontend/javascript/defer.js" %>" type="module"></script>
 
 <!-- Favicons -->
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="<%= site.config.base_url %>/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="<%= site.config.base_url %>/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="<%= site.config.base_url %>/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ec4899">
 <meta name="msapplication-TileColor" content="#da532c">
@@ -78,3 +80,6 @@
 
   applyTheme(getTheme())
 </script>
+
+
+<%= live_reload_dev_js %>
