workingon table parsing

--- a/docs/frontend/styles/_components.css
+++ b/docs/frontend/styles/_components.css
@@ -21,3 +21,4 @@
 @import "./components/_text.css";
 @import "./components/_theme_switcher.css";
 @import "./components/_top_nav.css";
+@import "./components/_tables.css";
