--- a/docs/src/_partials/_head.erb
+++ b/docs/src/_partials/_head.erb
@@ -3,7 +3,7 @@
 <% resource_title = strip_html(strip_newlines(title)) || site.metadata.title %>
 <title><%= resource_title %></title>
 
-<base href="<%= site.config.base_path %>/">
+<!-- <base href="<%= site.config.base_path %>/"> -->
 
 <meta name="description" content="<%= metadata.description %>" />
 <link rel="modulepreload" href="<%= find_asset "frontend/javascript/index.js" %>">
