--- a/docs/frontend/styles/components/_tables.css
+++ b/docs/frontend/styles/components/_tables.css
@@ -10,13 +10,13 @@ table {
 }
 
 th {
-  text-align: start;
   font-weight: 500;
   font-size: 1.1em;
 }
 
 th,
 td {
+  text-align: start;
   padding: 1rem;
 }
 
@@ -28,6 +28,6 @@ tbody > tr:nth-of-type(2n) {
   background-color: rgba(0,0,0,0.02);
 }
 
-tbody > tr code {
+table :is(code, code.highlight) {
   border: 1px solid rgba(0,0,0,0.2);
 }
