--- a/docs/src/_layouts/home.erb
+++ b/docs/src/_layouts/home.erb
@@ -14,7 +14,7 @@ layout: default
   <ul class="call-to-action__items" style="list-style: none;">
     <% resource.data.call_to_action_items.each do |item| %>
       <li>
-        <sl-button variant="<%= item[:type] %>" href="<%= item[:href] %>" class="call-to-action" pill>
+        <sl-button variant="<%= item[:type] %>" href="<%= site.base_path + "/" + item[:href] %>" class="call-to-action" pill>
           <%= item[:text].to_s.html_safe %>
         </sl-button>
       </li>
