--- a/docs/frontend/styles/_normalize.css
+++ b/docs/frontend/styles/_normalize.css
@@ -140,6 +140,7 @@ kr-layout::part(skip-link) {
   margin: -0.25em;
   line-height: 1.2;
   transition: all 0.2s;
+  font-size: 1em;
 }
 
 kr-layout::part(skip-link):is(:hover),
