--- a/docs/src/_layouts/doc.erb
+++ b/docs/src/_layouts/doc.erb
@@ -3,7 +3,7 @@ layout: default
 ---
 <%= render "side_nav" %>
 
-<main id="main" class="documentation-content">
+<main id="main" class="documentation-content flow">
   <% title_id = resource.data.title.downcase.split(" ").join("-").gsub(/[\?!]/, "") %>
   <h1 id="<%= title_id %>">
     <a href="<%= "##{title_id}" %>">
