Konnorrogers/textarea by itself (#6)
* light editor improvements

* remove unused code

* improvements to the editor and previews

* fix links

* working on disclosure stuff

* working on disclosure stuff

* fix light disclosure

* a number of fixes for light-disclosure

* swap to disclosure

* textarea by itself

* fixing textarea

* fixing styls for mobile

* refactor

* fix mobile styles

* remove red color

* working on current line highlighting

* add current line styles

* add current line styles

* set current line highlight in 'updated'

* fix line highlighting speed

* remove console.log

* ts-expect-error

* make lines 100% width for better line highlight

* fix highlighting empty lines

* fix highlighting empty lines

* more distinctive highlighting

* fix line highlight in chrome / safari

* use offsetHeight

* add test files

* add note about mutation observer

* working on things

* add a 'has-focused' attribute

* working on normalizing dom

* working on docs

* working on documentation

* working on documentation

* swap to prism

* remove highlight.js

--- a/docs/frontend/styles/_normalize.css
+++ b/docs/frontend/styles/_normalize.css
@@ -42,6 +42,10 @@ p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
 }
 
+.flow > * + * {
+  margin-block-start: var(--flow-space, 1em);
+}
+
 body {
   font-family: var(--sl-font-sans);
   min-height: 100%;
@@ -138,8 +142,6 @@ kr-layout::part(skip-link) {
   display: inline;
   padding: 0.25em;
   margin: -0.25em;
-  line-height: 1.2;
-  transition: all 0.2s;
 }
 
 kr-layout::part(skip-link):is(:hover),
