--- a/docs/frontend/styles/_normalize.css
+++ b/docs/frontend/styles/_normalize.css
@@ -16,10 +16,12 @@ body {
   text-rendering: optimizeSpeed;
   scrollbar-gutter: stable;
   font-family: var(--sl-font-sans);
-	background-color: var(--body-color);
-	color: var(--text-color);
-	display: grid;
-	grid-template-rows: minmax(0, 1fr);
+  background-color: var(--body-color);
+  color: var(--text-color);
+  display: grid;
+  grid-template-rows: minmax(0, 1fr);
+  min-height: 100%;
+  font-size: 1.25em;
   min-height: 100%;
   margin: 0;
   padding: 0;
@@ -46,11 +48,6 @@ p, h1, h2, h3, h4, h5, h6 {
   margin-block-start: var(--flow-space, 1em);
 }
 
-body {
-  font-family: var(--sl-font-sans);
-  min-height: 100%;
-}
-
 button {
   appearance: none;
   border: none;
@@ -70,33 +67,33 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 main p {
-  font-size: 1rem;
+  font-size: 1em;
 }
 
 h1 {
-  font-size: 1.25rem;
+  font-size: 1.25em;
   margin: 0;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 h2 {
-  font-size: 1.15rem;
+  font-size: 1.15em;
 }
 
 h3, h4 {
-  font-size: 1.1rem;
+  font-size: 1.1em;
 }
 
 h5, h6 {
-  font-size: 1.05rem;
+  font-size: 1.05em;
 }
 
 p {
   margin-top: 0.5em;
   margin-bottom: 0.5em;
   padding: 0;
-  font-size: 1rem;
+  font-size: 1em;
 }
 
 p, li {
@@ -104,7 +101,7 @@ p, li {
 }
 
 li {
-  font-size: 1rem;
+  font-size: 1em;
 }
 
 ul {
