--- a/docs/frontend/styles/components/_side_nav.css
+++ b/docs/frontend/styles/components/_side_nav.css
@@ -17,7 +17,7 @@ ul.side-nav__menu li::marker {
   padding: 8px;
   max-width: 100%;
   line-height: 1.3;
-  font-size: 1rem;
+  font-size: 1em;
   font-weight: normal;
 }
 
@@ -68,7 +68,7 @@ ul.side-nav__menu li::marker {
 }
 
 .side-nav__category-header {
-  font-size: 1.25rem;
+  font-size: 1.25em;
   margin-bottom: 0.5rem;
 }
 
