--- a/docs/frontend/styles/_normalize.css
+++ b/docs/frontend/styles/_normalize.css
@@ -15,13 +15,12 @@ body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeSpeed;
   scrollbar-gutter: stable;
-  font-family: var(--sl-font-sans);
   background-color: var(--body-color);
   color: var(--text-color);
   display: grid;
   grid-template-rows: minmax(0, 1fr);
   min-height: 100%;
-  font-size: 1.25em;
+  font-size: 18px;
   min-height: 100%;
   margin: 0;
   padding: 0;
