--- a/docs/src/_layouts/default.erb
+++ b/docs/src/_layouts/default.erb
@@ -14,6 +14,6 @@
     </kr-layout>
 
     <%= render "side_nav_mobile" %>
-    <bridgetown-ninja-keys endpoint="<%= site.base_path %>/bridgetown_quick_search/index.json"></bridgetown-ninja-keys>
+    <bridgetown-ninja-keys endpoint="<%= site.base_path %>/bridgetown_quick_search/index.json" highlight-matches></bridgetown-ninja-keys>
   </body>
 </html>
