--- a/docs/frontend/styles/components/_side_nav.css
+++ b/docs/frontend/styles/components/_side_nav.css
@@ -19,6 +19,31 @@ ul.side-nav__menu li::marker {
   line-height: 1.3;
   font-size: 1em;
   font-weight: normal;
+  border-inline-start: 4px solid transparent;
+  padding-inline-start: 0.5em;
+}
+
+.side-nav__item[data-level="2"] {
+  font-size: 1em;
+}
+
+.side-nav__item[data-level="3"] {
+  font-size: 0.95em;
+  margin-inline-start: 1em;
+}
+
+.side-nav__item[data-level="4"] {
+  font-size: 0.9em;
+  margin-inline-start: 2em;
+}
+
+.side-nav__item[data-level="5"] {
+  font-size: 0.85em;
+  margin-inline-start: 3em;
+}
+
+.side-nav__item a {
+  text-decoration: none;
 }
 
 .side-nav__link {
