--- a/docs/frontend/styles/_normalize.css
+++ b/docs/frontend/styles/_normalize.css
@@ -1,9 +1,13 @@
 html {
   box-sizing: border-box;
   height: 100%;
+  box-decoration-break: clone;
+  -webkit-box-decoration-break: clone;
   scrollbar-gutter: stable;
-  font-family: var(--sl-font-sans);
-  /* letter-spacing: 0.025em; */
+}
+
+light-code {
+  isolation: isolate;
 }
 
 *, *:before, *:after {
@@ -15,11 +19,12 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeSpeed;
+  font-family: var(--sl-font-sans);
   background-color: var(--body-color);
   color: var(--text-color);
   display: grid;
   grid-template-rows: minmax(0, 1fr);
-  min-height: 100%;
+  font-size: 110%;
   min-height: 100%;
   margin: 0;
   padding: 0;
@@ -44,6 +49,11 @@ p, h1, h2, h3, h4, h5, h6 {
 
 .flow > * + * {
   margin-block-start: var(--flow-space, 1em);
+}
+
+body {
+  font-family: var(--sl-font-sans);
+  min-height: 100%;
 }
 
 button {
@@ -188,7 +198,7 @@ a external-icon {
 
 blockquote {
   border-inline-start: 4px solid var(--divider-color);
-  margin-inline-start: 0.5rem;
-  padding: 0.75rem;
+  margin-inline-start: 0.5em;
+  padding: 0.75em;
   background-color: var(--sl-color-neutral-50);
 }
