--- a/scripts/plop/templates/component-globals.hbs
+++ b/scripts/plop/templates/component-globals.hbs
@@ -1,4 +1,4 @@
-import type {{ properCase tag }} from "./{{ tagWithoutPrefix tag }}.js"
+import type {{ properCase tag }} from "./{{ tag }}.js"
 
 declare global {
   interface HTMLElementTagNameMap {
