--- a/scripts/plop/templates/component-register.hbs
+++ b/scripts/plop/templates/component-register.hbs
@@ -1,11 +1,11 @@
 // @ts-check
-import {{ properCase tag }} from './{{ tagWithoutPrefix tag }}.js';
+import {{ properCase tag }} from './{{ tag }}.js';
 
 {{ properCase tag }}.define('{{ tag }}');
 
 export default {{ properCase tag }};
-export * from './{{ tagWithoutPrefix tag }}.js';
+export * from './{{ tag }}.js';
 
 /**
- * @type {import("./{{ tagWithoutPrefix tag }}-globals.js")}
+ * @type {import("./{{ tag }}-globals.js")}
  */
