--- a/scripts/plop/templates/component-styles.hbs
+++ b/scripts/plop/templates/component-styles.hbs
@@ -1,2 +1,7 @@
-import { css } from "lit" export const componentStyles = css` :host { display:
-inline-block; } `
+import { css } from "lit"
+
+export const componentStyles = css`
+  :host {
+    display: inline-block;
+  }
+`
