--- a/docs/frontend/styles/components/_layout.css
+++ b/docs/frontend/styles/components/_layout.css
@@ -2,13 +2,17 @@
   background-color: var(--sl-color-neutral-50);
 }
 
-/* .documentation-content {} */
-
-body:is(.index, .doc, .page, .post) kr-layout::part(main-content) {
-  background: var(--body-color);
+.documentation-content {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
 }
 
-kr-layout > [slot="aside"] {
+body:is(.index, .doc, .page, .post) kr-layout::part(main-content) {
+	background: var(--body-color);
+}
+
+kr-layout > [slot='aside'] {
   display: none;
 }
 
@@ -42,7 +46,6 @@ kr-layout::part(skip-links) {
 kr-layout::part(body) {
   max-width: 100%;
   justify-content: center;
-  margin: 0 auto;
 }
 
 kr-layout::part(main) {
@@ -50,18 +53,12 @@ kr-layout::part(main) {
 }
 
 main {
-  max-width: 100%;
-  padding: 0 var(--main-padding-x) 2rem;
-  width: 100%;
-  margin: 0 auto;
-  background-color: var(--body-color);
-  color: var(--text-color);
-}
-
-.documentation-content {
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
+	max-width: 100%;
+	padding: 0 var(--main-padding-x) 2rem;
+	width: 100%;
+	margin: 0 auto;
+	background-color: var(--body-color);
+	color: var(--text-color);
 }
 
 :is(.default, .home) main {
@@ -69,15 +66,16 @@ main {
 }
 
 :is(.default, .home) .footer {
-  width: 100vw;
+  width: 100%;
 }
 
 :is(.doc, .index, .page, .post) main {
-  background-color: var(--body-color);
+	background-color: var(--body-color);
 }
 
+
 @media screen and (min-width: 1360px) {
-  kr-layout > [slot="aside"] {
+  kr-layout > [slot='aside'] {
     display: block;
   }
 }
@@ -93,15 +91,17 @@ main {
     border-radius: 32px;
   }
 
-  body:is(.index, .doc, .page, .post) kr-layout::part(main) {
-    background-color: transparent;
-    margin-inline-end: 16px;
-    margin-inline-start: 16px;
-  }
+	body:is(.index, .doc, .page, .post) kr-layout::part(main) {
+	  background-color: transparent;
+	  margin-inline-end: 16px;
+	  margin-inline-start: 16px;
 
-  body:is(.index, .doc, .page, .post) kr-layout::part(main-content) {
-    box-shadow: 0 0 5px 0 rgb(0 0 0 / 10%);
-    background: var(--body-color);
-    border-radius: 32px;
-  }
+	}
+
+	body:is(.index, .doc, .page, .post) kr-layout::part(main-content) {
+		box-shadow: 0 0 5px 0 rgb(0 0 0 / 10%);
+		background: var(--body-color);
+		border-radius: 32px;
+	}
 }
+
