--- a/docs/frontend/styles/_normalize.css
+++ b/docs/frontend/styles/_normalize.css
@@ -6,7 +6,9 @@ html {
   box-decoration-break: clone;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
 }
 
@@ -20,10 +22,10 @@ body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeSpeed;
   font-family: var(--sl-font-sans);
-	background-color: var(--body-color);
-	color: var(--text-color);
-	display: grid;
-	grid-template-rows: minmax(0, 1fr);
+  background-color: var(--body-color);
+  color: var(--text-color);
+  display: grid;
+  grid-template-rows: minmax(0, 1fr);
   min-height: 100%;
   margin: 0;
   padding: 0;
@@ -34,16 +36,29 @@ body {
   display: none !important;
 }
 
-img, picture, video, canvas, svg {
+img,
+picture,
+video,
+canvas,
+svg {
   display: block;
   max-width: 100%;
 }
 
-input, button, textarea, select {
+input,
+button,
+textarea,
+select {
   font: inherit;
 }
 
-p, h1, h2, h3, h4, h5, h6 {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   overflow-wrap: break-word;
 }
 
@@ -62,7 +77,12 @@ button:hover {
   cursor: pointer;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   scroll-margin-top: calc(80px + 2em);
   margin: 0;
   padding: 0;
@@ -85,11 +105,13 @@ h2 {
   font-size: 1.15em;
 }
 
-h3, h4 {
+h3,
+h4 {
   font-size: 1.1em;
 }
 
-h5, h6 {
+h5,
+h6 {
   font-size: 1.05em;
 }
 
@@ -100,7 +122,8 @@ p {
   font-size: 1em;
 }
 
-p, li {
+p,
+li {
   line-height: 1.5;
 }
 
@@ -150,7 +173,6 @@ a:is(:hover) {
   color: var(--link-color-focus);
 }
 
-
 kr-layout::part(skip-link):is(:focus-visible),
 a:is(:focus-visible) {
   box-shadow: 0px 0px 3px 3px var(--sl-color-primary-600);
@@ -198,4 +220,3 @@ blockquote {
   padding: 0.75em;
   background-color: var(--sl-color-neutral-50);
 }
-
