fix code snippets

--- a/docs/src/_components/syntax.erb
+++ b/docs/src/_components/syntax.erb
@@ -4,19 +4,19 @@
       <%= filename_or_language %>
     </div>
 
-    <clipboard-copy
+    <button
       for="<%= id %>"
       class="button clipboard clipboard--idle syntax-block__clipboard"
       aria-label="Copy to clipboard"
       data-controller="clipboard"
+      type="button"
     >
       <sl-icon class="clipboard__icon--success" name="clipboard-check"></sl-icon>
       <sl-icon class="clipboard__icon--idle" name="clipboard"></sl-icon>
-    </clipboard-copy>
+    </button>
 
     <script type="text/plain" id="<%= id %>" hidden><%= content %></script>
 
   </div>
-  <%= markdownify("```#{language}" + content + "```") %>
+  <%= markdownify("```#{highlight_language}" + content + "```") %>
 </div>
-
